--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -16,7 +16,7 @@
 }
 .header_leaderboard {
   position: fixed;
-  margin-top: 1.81rem;
+  padding-top: 1.81rem;
   z-index: 100;
 }
 
@@ -34,9 +34,6 @@
 .stars {
   position: fixed;
   margin-top: 3rem;
-}
-.starburst {
-  z-index: 10;
 }
 
 .scorecard_container {
@@ -109,6 +106,64 @@
   /* padding-bottom: 9rem; */
 }
 
+/* Second page */
+.graph_header_leaderboard {
+  position: fixed;
+  margin-top: -2.5rem;
+  z-index: 100;
+}
+.leaderboard_name {
+  color: white;
+  font-size: 36px;
+  z-index: 110;
+  margin-top: -1.8rem;
+}
+/* Graph */
+.graph_container {
+  z-index: 0;
+}
+
+/* Table */
+.table_pricing_data {
+  table-layout: fixed;
+  width: 95%;
+  border-collapse: collapse;
+  border: 1px solid rgb(227, 231, 233);
+  box-shadow: 1px 1px 2px rgb(215, 223, 240);
+  margin-top: 2rem;
+  color: white;
+}
+.table_pricing_data thead {
+  background-color: #1a84ee;
+}
+
+.table_pricing_data thead th {
+  padding-top: 15px;
+  padding-bottom: 10px;
+  color: rgb(253, 251, 251);
+}
+.table_pricing_data thead th:first-child {
+  padding-left: 10px;
+}
+
+.table_pricing_data tbody td {
+  text-align: center;
+  height: 40px;
+}
+
+.table_pricing_data tbody td:first-child {
+  text-align: left;
+  padding-left: 10px;
+}
+.table_pricing_data thead th:nth-child(1) {
+  width: 60%;
+  text-align: left;
+}
+
+.table_pricing_data tbody tr:nth-child(odd) {
+  background-color: #f138c3;
+}
+
 @media screen and (min-width: 400px) {
   .left_scorecard {
     font-size: 1.8rem;
@@ -123,10 +178,6 @@
     margin-right: 1rem;
   }
   .right_scorecard {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
     width: 8.125rem;
     height: 2.57781rem;
     font-size: 1.8rem;
